<resources>
    <string name="app_name">IozhProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_login">Войти</string>
    <string name="menu_register">Зарегестрироваться</string>
    <string name="menu_main_page">Главная</string>
    <string name="menu_common_hedgehog">Европейский ёж</string>
    <string name="menu_african_hedgehog">Африканский ёж</string>
    <string name="menu_hears_hedgehog">Ушастый ёж</string>
    <string name="menu_about">Подробнее</string>


    <string name="ab_about">Создано iozh11</string>


    <string name="lifestyle">образ жизни</string>
    <string name="life_in_the_house">жизнь в доме</string>
    <string name="interesting_facts">интересные факты</string>


    <string name="ab_iozh_african">
        Африканский карликовый ёж – это небольшое млекопитающее распространенное в Центральной и Восточной Африке. Он, как и европейский ёж, имеет колючки на спине, но меньше по размерам. Африканские ежи популярны в качестве домашних питомцев, в отличие от своих европейских собратьев. Они ведут ночной образ жизни и питаются в основном насекомыми и другими беспозвоночными.
    </string>
    <string name="lifestyle_text_african">
        \nНочная активность\n
        Африканские карликовые ежи, как и большинство ежей, ведут ночной образ жизни. Днем они спят в своих укрытиях, а ночью выходят на поиски пищи.\n\n
        Рацион питания\n
        В дикой природе их рацион состоит в основном из насекомых, таких как жуки, кузнечики, сверчки, гусеницы, а также из улиток и других мелких беспозвоночных. В неволе их кормят специальными кормами для ежей, которые можно приобрести в зоомагазинах, а также разрешают кушать немного вареного мяса без соли и приправ и вареных яиц.\n\n
        Активность и поведение\n
        Африканские карликовые ежи активны и любопытны. Они любят исследовать окружающую среду, могут быстро бегать и даже плавать. В случае опасности они сворачиваются в клубок, пряча голову и лапы под колючками. В отличие от европейских ежей, они не впадают в спячку, но могут замедлять свою активность в прохладную погоду.\n\n
    </string>
    <string name="living_text_african">
        \nПопулярный питомец\n
        В отличие от европейских ежей, африканские карликовые ежи часто содержатся в качестве домашних питомцев. Это связано с их небольшими размерами, нетребовательностью к содержанию и милым внешним видом.\n\n
        Содержание\n
        Для африканского ежа необходимо подготовить просторный террариум или клетку с гладким дном. Внутри должно быть убежище (домик), поилка, кормушка и беговое колесо. Важно поддерживать температуру в пределах 22-27°C и избегать сквозняков.\n\n
        Особенности ухода\n
        Необходимо регулярно чистить клетку, менять воду и еду, а также следить за состоянием ежа. Важно обеспечить ему сбалансированное питание и достаточное количество физической активности. Ежики также нуждаются во взаимодействии, поэтому стоит с ними играть и общаться каждый день.\n\n
    </string>
    <string name="facts_text_african">
        \n1) Африканские карликовые ежи имеют разнообразные окрасы, которые варьируются от светло-бежевого до темно-коричневого. Также встречаются ежи-альбиносы.\n\n
        2) Когда африканский ёжик пробует что-то новое (например, новый корм или игрушку), он может начать "намазывать" слюной свои колючки. Это явление называют "помазанием" или "антингом". Учёные предполагают, что таким образом ёжики пробуют новые ароматы или прячут их на своем теле.\n\n
        3) Эти ежи очень любознательны и активны. Они любят исследовать новые предметы, играть и взаимодействовать с хозяином. Это делает их интересными питомцами для людей, которые готовы уделять им достаточно внимания.\n
    </string>


    <string name="ab_iozh_common">
            Европейский ёж – это небольшое млекопитающее, покрытое колючками на спине и боках. Он ведёт ночной образ жизни, питается насекомыми, слизнями и другими беспозвоночными, а также может есть ягоды и фрукты. Ёжики обитают в лесах, парках и садах по всей Европе.
    </string>
    <string name="lifestyle_text_common">
        \nНочная активность\n
        Европейские ежи являются ночными животными. Это означает, что они наиболее активны в темное время суток, когда они выходят на поиски пищи. Днем они, как правило, прячутся в своих гнездах, которые могут располагаться под кустами, в траве или в других укрытиях.\n\n
        Рацион питания\n
        Ежи всеядны, но основу их рациона составляют насекомые, жуки, гусеницы, слизни и улитки. Также они могут поедать яйца птиц, лягушек, ящериц и мелких грызунов. Иногда ежи могут есть ягоды, фрукты и грибы. Благодаря своей диете, ежи играют важную роль в контроле численности вредителей.\n\n
        Зимовка\n
        В холодное время года европейские ежи впадают в спячку. В этот период их метаболизм замедляется, температура тела понижается, и они практически не двигаются. Спячка обычно длится с осени до весны. Перед тем как впасть в спячку, ежи активно набирают вес, чтобы иметь достаточно запасов энергии.\n\n
    </string>
    <string name="living_text_common">
        \nНежелательные гости\n
        Ежи не предназначены для жизни в доме, так как им нужен открытый воздух и естественная среда обитания. Они могут случайно заблудиться и попасть в жилище, например, через открытую дверь или окно. Если ёж оказался в доме, лучше всего аккуратно вынести его на улицу в безопасное место, например, в сад или парк.\n\n
        Опасность внутри дома\n
        В доме ежи могут столкнуться с различными опасностями, такими как яды для грызунов или насекомых, моющие средства, электрические провода и другие предметы, которые могут им навредить. Также в доме они не смогут найти подходящую пищу и будут испытывать стресс.\n\n
        Помощь при необходимости\n
        Если вы нашли раненого или ослабленного ежа, вы можете временно приютить его в доме, предоставив ему теплое и безопасное место, а также еду и воду. Но важно понимать, что ёж - это дикое животное, и после того, как он оправится, его нужно вернуть в естественную среду обитания.\n\n
    </string>
    <string name="facts_text_common">
        \n1) Колючки на спине ежа – это не просто украшение, а эффективное средство защиты от хищников. В случае опасности ёж сворачивается в клубок, пряча под колючками голову и ноги.\n\n
        2) Ежи обладают отличным обонянием и слухом, что помогает им находить пищу и избегать опасности. Зрение у них не очень хорошее, поэтому они больше полагаются на обоняние и слух.\n\n
        3) Ежи играют важную роль в экосистеме, поедая вредных насекомых и других беспозвоночных. Они также участвуют в распространении семян растений, перенося их на своей шерсти. Ежи также являются пищей для некоторых хищников, например, лисиц или сов, но в основном они могут защитить себя благодаря колючкам.\n\n
    </string>


    <string name="ab_iozh_longeared"></string>
    <string name="lifestyle_text_longeared"></string>
    <string name="living_text_longeared"></string>
    <string name="facts_text_longeared"></string>

    <string name="index">
        Кто такие ёжики?\n\n
        Ёжики — это маленькие колючие животные, которые часто становятся домашними питомцами. Очень милые и любопытные существа с черными носиками и глазами-бусинками обладают уникальным характером.\n
        Ёжики могут стать отличными компаньонами и источником радости для своих владельцев.\n\n
        Однако важно помнить, что ёжики — это не игрушки. За ними нужно следить внимательнее, чем за обычными питомцами. Они требуют особого ухода, включая специальное питание и подходящие условия содержания. Ёжики чувствительны к температуре и стрессу, поэтому важно создать спокойную и безопасную среду.\n\n
        Так как ёжики — ночные животные, их активность приходится на вечер и ночь. Это следует учитывать, чтобы обеспечить им качественное время общения и не беспокоить в часы отдыха. Заботливый подход к их содержанию сделает ваши отношения с ёжиком более радостными.
    </string>



    <string name="login_hint">example@mail.ru</string>
    <string name="password_hint">12345678</string>
    <string name="title_init">Привет!</string>
    <string name="title_user_exist">Войдём в аккаунт</string>
    <string name="title_user_new">Создадим аккаунт</string>
    <string name="button_init">Далее</string>
    <string name="button_user_exist">Войти</string>
    <string name="button_user_new">Зарегистрироваться</string>


</resources>